finaly figured out how to use libs

--- a/conf.toml
+++ b/conf.toml
@@ -1,5 +1,5 @@
 [path]
-path="/home/tom/.config/riptide/scripts/"
+path="/home/talandar/.config/riptide/scripts/"
 
 [info_header]
 show_if_fail=true
